# tochka-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .spectral.yaml  DATABASE.md  Makefile  README.md  docker-compose.db.yml  docker-compose.yml  package.json  pyproject.toml  redocly.yaml
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml  validate-openapi.yml
b2b/: Dockerfile  entrypoint.sh  openapi.yaml  pyproject.toml
b2b/alembic/: env.py
b2b/alembic/versions/: 001_initial_schema.py
b2b/src/: main.py  models.py
b2b/src/api/categories/: __init__.py
b2b/src/api/invoices/: __init__.py
b2b/src/api/products/: __init__.py
b2b/src/api/skus/: __init__.py
b2c/: Dockerfile  entrypoint.sh  pyproject.toml
b2c/alembic/: env.py
b2c/alembic/versions/: 001_initial_schema.py
b2c/cart/: openapi.yaml
b2c/cart/team-muzhchiny-i-polya/: OpenApi.yaml
b2c/catalog/: openapi.yaml
b2c/orders/: openapi.yaml
b2c/src/: main.py  models.py
b2c/src/api/cart/: __init__.py
b2c/src/api/catalog/: __init__.py  dependencies.py  filters.py  schemas.py
b2c/src/api/categories/: __init__.py
b2c/src/api/favorites/: __init__.py
b2c/src/api/home/: __init__.py
b2c/src/api/products/: __init__.py  dependencies.py  schemas.py
b2c/src/catalog/: domain.py  repository.py
b2c/src/product_card/: domain.py  repository.py  service.py
b2c/tests/: conftest.py  test_catalog.py  test_product_card.py
docs/: index.html  product-card.html
forge/: api.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js  styles.css
moderation/: Dockerfile  entrypoint.sh  pyproject.toml
moderation/alembic/: env.py
moderation/alembic/versions/: 001_initial_schema.py
moderation/src/: main.py  models.py
moderation/src/api/blocking_reasons/: __init__.py
moderation/src/api/product_moderation/: __init__.py
scripts/: init-databases.sql
shared/: pyproject.toml
