[project]
name = "tochka-backend"
version = "0.0.0"
description = "NeoMarket backend monorepo (B2B, B2C, moderation)"
requires-python = ">=3.14"

[tool.uv.workspace]
members = ["shared", "b2b", "b2c", "moderation"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "schemathesis>=3.36",
    "mypy>=1.13",
    "ruff>=0.8",
    "pre-commit>=4.0",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["shared/src", "b2b/src", "b2c/src", "moderation/src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "ASYNC", "S", "N"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S", "N"]

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["shared/tests", "b2b/tests", "b2c/tests", "moderation/tests"]
addopts = "--strict-markers -ra"
