[project]
name = "b2c-service"
version = "0.0.0"
description = "B2C service (catalog, cart, orders)"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "uvicorn[standard]>=0.32",
    "psycopg[binary,pool]>=3.2",
    "httpx>=0.27",
    "pyjwt>=2.9",
    "redis>=5.2",
    "shared",
]

[tool.uv]
package = false

[tool.uv.sources]
shared = { workspace = true }
