[project]
name = "moderation-service"
version = "0.0.0"
description = "Moderation service"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "uvicorn[standard]>=0.32",
    "psycopg[binary,pool]>=3.2",
    "httpx>=0.27",
    "pyjwt>=2.9",
    "redis>=5.2",
    "shared",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moderation"]
