[project]
name = "shared"
version = "0.0.0"
description = "Shared models, JWT utils, HTTP clients for NeoMarket services"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "pyjwt>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]
